# flux-index

./: .gitignore  AGENT.md  README.md  pyproject.toml  setup.py
flux_index/: __init__.py  __main__.py  cli.py  core.py  crdt.py  extractor.py  flux_vector_search.h
flux_index.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
memory/: JOURNAL.md
tests/: test_core.py  test_crdt.py  test_extractors.py  test_search.py
