[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-index"
version = "0.1.0"
description = "Semantic code search, zero dependencies. Spring-load any repo into a searchable vector space."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Forgemaster", email = "forgemaster@superinstance.dev"}]
keywords = ["code-search", "semantic-search", "embeddings", "eisenstein", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.scripts]
flux-index = "flux_index.cli:main"

[tool.setuptools.packages.find]
include = ["flux_index*"]
